--- a/config/i3/config
+++ b/config/i3/config
@@ -55,10 +55,10 @@ bindsym $mod+d exec --no-startup-id dmenu_run
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+#bindsym $mod+j focus left
+#bindsym $mod+k focus down
+#bindsym $mod+l focus up
+#bindsym $mod+semicolon focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -186,13 +186,30 @@ hide_edge_borders both
 exec --no-startup-id "picom -b"
 
 # For Menu
-exec --no-startup-id  ~/.config/polybar/launch.sh
+#exec --no-startup-id  ~/.config/polybar/launch.sh
 
 # Sacar capturas de pantalla
 bindsym Print exec "scrot ~/Pictures/Screenshots/%b%d::%H%M%S.png"
 
+# Iniciar proceso para lock session
+exec --no-startup-id "/usr/bin/light-locker"
+bindsym $mod+l exec "light-locker-command --lock"
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-#bar {
-#        status_command polybar example
-#}
+# finds out, if available)
+bar {
+        status_command    python ~/.config/i3/i3pystatus.conf
+    	position          top
+    	workspace_buttons yes
+    	font pango:Hack, FontAwesome 10
+    	colors {
+        	background #000000
+        	statusline #e7dfd9
+        	separator  #5d5d5d
+        	focused_workspace  #2aa198 #073642 #eee895
+        	active_workspace   #073642 #859900 #839496
+        	inactive_workspace #002b36  #002b36   #586e75
+        	urgent_workspace   #cb4b16 #dc322f #fdf6e3
+    	}
+}
